--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index",
+    "serve": "node index.js"
   },
   "dependencies": {
     "apollo-server": "^2.18.2",
