--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node index",
     "server": "node index",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "dependencies": {
     "apollo-server": "^2.18.2",
+    "apollo-server-express": "^2.19.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
